--- a/public/_assets/~debug/compile.mdx
+++ b/public/_assets/~debug/compile.mdx
@@ -5,7 +5,7 @@ summary: |
   이 문서는 Markdown 컴파일러 테스트에도 사용됩니다.
 ---
 
-해당 문서를 포함해 이 사이트의 모든 문서에서는 아래의 Markdown 문법을 사용합니다
+해당 문서를 포함해 이 사이트의 모든 문서에서는 아래의 Markdown 문법을 사용합니다.
 <gh:AlphaKR93>이 개인적으로 사용하는 Markdown 문법이라 하여 알파마크라고도 합니다.
 
 이 문서는 여러분에게 알파마크 문법을 소개하기 위함도 있지만,
